--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script
+      src="https://kit.fontawesome.com/d2fc4a7a3e.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Menú</title>
 </head>
 <body>
@@ -12,126 +20,87 @@
         <ul>
             <li class="container">
                 <div class="box-container">
-                <img src="./assets/img/maria.jpg"></div>
+                    <img src="./assets/img/maria.jpg" class="img-thumbnail"></div>
                 <div class="text-container">
-                    María
-                <p>Activa ahora</p>
+                    <p class="title">María</p>
+                    <p class="subtitles">Activa ahora</p>
+                </div>
+                <div class="iconos">
+                    <i class="fa-regular fa-message"></i>
+                
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+            </li>
+            <li>
+                <button type="button" class="btn btn-primary">Nuevo Chat</button>
+            </li>            
+            <li class="container">
+                <div class="box-container">
+                <img src="./assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg"></div>
+                <div class="text-container">
+                    <p class="subtitles">Juanita</p>
+                    <p class="subtitles">At vero eos et accusa</p>
                 </div>
             </li>
             <li class="container">
                 <div class="box-container">
-                <img src="./assets/img/maria.jpg"></div>
+                <img src="./assets/img/Screen Shot 2018-11-28 at 15.32.16.jpg"></div>
                 <div class="text-container">
-                    María
-                <p>Activa ahora</p>
+                    Alberto
+                <p>Blanditiis praesentium</p>
                 </div>
             </li>
             <li class="container">
                 <div class="box-container">
-                <img src="./assets/img/maria.jpg"></div>
+                <img src="./assets/img/Screen Shot 2018-11-28 at 15.30.34.jpg"></div>
                 <div class="text-container">
-                    María
-                <p>Activa ahora</p>
+                    Ignacio
+                <p>Officiis debitis aut</p>
                 </div>
             </li>
             <li class="container">
                 <div class="box-container">
-                <img src="./assets/img/maria.jpg"></div>
+                <img src="./assets/img/Screen Shot 2018-11-28 at 15.28.30.jpg"></div>
                 <div class="text-container">
-                    María
-                <p>Activa ahora</p>
+                    Cristian
+                <p>Nam libero tempore</p>
                 </div>
             </li>
             <li class="container">
                 <div class="box-container">
-                <img src="./assets/img/maria.jpg"></div>
+                <img src="./assets/img/Screen Shot 2018-11-28 at 15.32.44.jpg"></div>
                 <div class="text-container">
-                    María
-                <p>Activa ahora</p>
+                    María José
+                <p>Impedit quo minus id</p>
                 </div>
             </li>
             <li class="container">
                 <div class="box-container">
-                <img src="./assets/img/maria.jpg"></div>
+                <img src="./assets/img/Screen Shot 2018-11-28 at 15.31.09.jpg"></div>
                 <div class="text-container">
-                    María
-                <p>Activa ahora</p>
+                    Gonzalo
+                <p>At vero eos accusa</p>
                 </div>
             </li>
             <li class="container">
                 <div class="box-container">
-                <img src="./assets/img/maria.jpg"></div>
+                <img src="./assets/img/Screen Shot 2018-11-28 at 15.30.54.jpg"></div>
                 <div class="text-container">
-                    María
-                <p>Activa ahora</p>
+                    Juan Pablo
+                <p>Necessitatibus seape</p>
                 </div>
             </li>
             <li class="container">
                 <div class="box-container">
-                <img src="./assets/img/maria.jpg"></div>
+                <img src="./assets/img/Screen Shot 2018-11-28 at 15.28.04.jpg"></div>
                 <div class="text-container">
-                    María
-                <p>Activa ahora</p>
-                </div>
-            </li>
-            <li class="container">
-                <div class="box-container">
-                <img src="./assets/img/maria.jpg"></div>
-                <div class="text-container">
-                    María
-                <p>Activa ahora</p>
-                </div>
-            </li>
-            <li class="container">
-                <div class="box-container">
-                <img src="./assets/img/maria.jpg"></div>
-                <div class="text-container">
-                    María
-                <p>Activa ahora</p>
-                </div>
-            </li>
-            <li class="container">
-                <div class="box-container">
-                <img src="./assets/img/maria.jpg"></div>
-                <div class="text-container">
-                    María
-                <p>Activa ahora</p>
-                </div>
-            </li>
-            <li class="container">
-                <div class="box-container">
-                <img src="./assets/img/maria.jpg"></div>
-                <div class="text-container">
-                    María
-                <p>Activa ahora</p>
-                </div>
-            </li>
-            <li class="container">
-                <div class="box-container">
-                <img src="./assets/img/maria.jpg"></div>
-                <div class="text-container">
-                    María
-                <p>Activa ahora</p>
-                </div>
-            </li>
-            <li class="container">
-                <div class="box-container">
-                <img src="./assets/img/maria.jpg"></div>
-                <div class="text-container">
-                    María
-                <p>Activa ahora</p>
-                </div>
-            </li>
-            <li class="container">
-                <div class="box-container">
-                <img src="./assets/img/maria.jpg"></div>
-                <div class="text-container">
-                    María
-                <p>Activa ahora</p>
+                    Magdalena
+                <p>Ut et voluptates</p>
                 </div>
             </li>
         </ul>
-    </menu>   
+    </menu>
+
         <div class="content-p">
             <img src="./assets/img/hand.png" width="200px">
             <h1>Comienza el Networking</h1>
@@ -141,5 +110,8 @@
         </div>
   
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js" integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK" crossorigin="anonymous"></script>
+
 </body>
 </html>
