--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>Menú</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    <title>Menú</title>
 </head>
 <body>
 <div class="main-container">
@@ -38,7 +37,7 @@
                 <div class="box-container">
                 <img src="./assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg"></div>
                 <div class="text-container">
-                    <p class="subtitles">Juanita</p>
+                    <p class="title">Juanita</p>
                     <p class="subtitles">At vero eos et accusa</p>
                 </div>
             </li>
@@ -46,56 +45,56 @@
                 <div class="box-container">
                 <img src="./assets/img/Screen Shot 2018-11-28 at 15.32.16.jpg"></div>
                 <div class="text-container">
-                    Alberto
-                <p>Blanditiis praesentium</p>
+                    <p class="title">Alberto</p>
+                    <p class="subtitles">Blanditiis praesentium</p>
                 </div>
             </li>
             <li class="container">
                 <div class="box-container">
                 <img src="./assets/img/Screen Shot 2018-11-28 at 15.30.34.jpg"></div>
                 <div class="text-container">
-                    Ignacio
-                <p>Officiis debitis aut</p>
+                    <p class="title">Ignacio</p>
+                    <p class="subtitles">Officiis debitis aut</p>
                 </div>
             </li>
             <li class="container">
                 <div class="box-container">
                 <img src="./assets/img/Screen Shot 2018-11-28 at 15.28.30.jpg"></div>
                 <div class="text-container">
-                    Cristian
-                <p>Nam libero tempore</p>
+                    <p class="title">Cristian</p>
+                    <p class="subtitles">Nam libero tempore</p>
                 </div>
             </li>
             <li class="container">
                 <div class="box-container">
                 <img src="./assets/img/Screen Shot 2018-11-28 at 15.32.44.jpg"></div>
                 <div class="text-container">
-                    María José
-                <p>Impedit quo minus id</p>
+                    <p class="title">María José</p>
+                    <p class="subtitles">Impedit quo minus id</p>
                 </div>
             </li>
             <li class="container">
                 <div class="box-container">
                 <img src="./assets/img/Screen Shot 2018-11-28 at 15.31.09.jpg"></div>
                 <div class="text-container">
-                    Gonzalo
-                <p>At vero eos accusa</p>
+                    <p class="title">Gonzalo</p>
+                    <p class="subtitles">At vero eos accusa</p>
                 </div>
             </li>
             <li class="container">
                 <div class="box-container">
                 <img src="./assets/img/Screen Shot 2018-11-28 at 15.30.54.jpg"></div>
                 <div class="text-container">
-                    Juan Pablo
-                <p>Necessitatibus seape</p>
+                    <p class="title">Juan Pablo</p>
+                    <p class="subtitles">Necessitatibus seape</p>
                 </div>
             </li>
             <li class="container">
                 <div class="box-container">
                 <img src="./assets/img/Screen Shot 2018-11-28 at 15.28.04.jpg"></div>
                 <div class="text-container">
-                    Magdalena
-                <p>Ut et voluptates</p>
+                    <p class="title">Magdalena</p>
+                    <p class="subtitles">Ut et voluptates</p>
                 </div>
             </li>
         </ul>
@@ -103,9 +102,9 @@
 
         <div class="content-p">
             <img src="./assets/img/hand.png" width="200px">
-            <h1>Comienza el Networking</h1>
-            <p>Presiona el "<strong>Nuevo chat</strong>" para comenzar a crear nuevas</p>
-            <p>redes de contacto para tu empresa o  emprendimiento</p>
+            <h1>Comienza el Nertworking</h1>
+            <p class="subtitles-content">Presiona el "<strong>Nuevo chat</strong>" para comenzar a crear nuevas</p>
+            <p class="subtitles-content">redes de contacto para tu empresa o  emprendimiento</p>
             
         </div>
   
