--- a/index.html
+++ b/index.html
@@ -18,83 +18,105 @@
        <menu>
         <ul>
             <li class="container">
-                <div class="box-container">
-                    <img src="./assets/img/maria.jpg" class="img-thumbnail"></div>
-                <div class="text-container">
-                    <p class="title">María</p>
-                    <p class="subtitles">Activa ahora</p>
-                </div>
-                <div class="iconos">
-                    <i class="fa-regular fa-message"></i>
-                
-                    <i class="fa-solid fa-bars"></i>
+                <div class="content-1">
+                    <div class="box-container">
+                        <img src="./assets/img/maria.jpg" class="img-thumbnail">
+                    </div>
+                    <div class="text-container">
+                        <p class="title">María</p>
+                        <p class="subtitles">Activa ahora</p>
+                    </div>
+                    <div class="iconos">
+                        <div>
+                            <i class="fa-regular fa-message"></i>
+                        </div>
+                        <div>
+                            <i class="fa-solid fa-bars"></i>
+                        </div>
+                    </div>
                 </div>
             </li>
             <li>
-                <button type="button" class="btn btn-primary">Nuevo Chat</button>
+                <button type="button" class="btn btn-primary btn-lg">Nuevo Chat</button>
             </li>            
             <li class="container">
-                <div class="box-container">
-                <img src="./assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg"></div>
-                <div class="text-container">
-                    <p class="title">Juanita</p>
-                    <p class="subtitles">At vero eos et accusa</p>
+                <div class="content-1">
+                    <div class="box-container">
+                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg"></div>
+                    <div class="text-container">
+                        <p class="title">Juanita</p>
+                        <p class="subtitles">At vero eos et accusa</p>
+                    </div>
                 </div>
             </li>
             <li class="container">
-                <div class="box-container">
-                <img src="./assets/img/Screen Shot 2018-11-28 at 15.32.16.jpg"></div>
-                <div class="text-container">
-                    <p class="title">Alberto</p>
-                    <p class="subtitles">Blanditiis praesentium</p>
+                <div class="content-1">
+                    <div class="box-container">
+                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.32.16.jpg"></div>
+                    <div class="text-container">
+                        <p class="title">Alberto</p>
+                        <p class="subtitles">Blanditiis praesentium</p>
+                    </div>
                 </div>
             </li>
             <li class="container">
-                <div class="box-container">
-                <img src="./assets/img/Screen Shot 2018-11-28 at 15.30.34.jpg"></div>
-                <div class="text-container">
-                    <p class="title">Ignacio</p>
-                    <p class="subtitles">Officiis debitis aut</p>
+                <div class="content-1">
+                    <div class="box-container">
+                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.30.34.jpg"></div>
+                    <div class="text-container">
+                        <p class="title">Ignacio</p>
+                        <p class="subtitles">Officiis debitis aut</p>
+                    </div>
                 </div>
             </li>
             <li class="container">
-                <div class="box-container">
-                <img src="./assets/img/Screen Shot 2018-11-28 at 15.28.30.jpg"></div>
-                <div class="text-container">
-                    <p class="title">Cristian</p>
-                    <p class="subtitles">Nam libero tempore</p>
+                <div class="content-1">
+                    <div class="box-container">
+                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.28.30.jpg"></div>
+                    <div class="text-container">
+                        <p class="title">Cristian</p>
+                        <p class="subtitles">Nam libero tempore</p>
+                    </div>
                 </div>
             </li>
             <li class="container">
-                <div class="box-container">
-                <img src="./assets/img/Screen Shot 2018-11-28 at 15.32.44.jpg"></div>
-                <div class="text-container">
-                    <p class="title">María José</p>
-                    <p class="subtitles">Impedit quo minus id</p>
+                <div class="content-1">
+                    <div class="box-container">
+                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.32.44.jpg"></div>
+                    <div class="text-container">
+                        <p class="title">María José</p>
+                        <p class="subtitles">Impedit quo minus id</p>
+                    </div>
                 </div>
             </li>
             <li class="container">
-                <div class="box-container">
-                <img src="./assets/img/Screen Shot 2018-11-28 at 15.31.09.jpg"></div>
-                <div class="text-container">
-                    <p class="title">Gonzalo</p>
-                    <p class="subtitles">At vero eos accusa</p>
+                <div class="content-1">
+                    <div class="box-container">
+                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.31.09.jpg"></div>
+                    <div class="text-container">
+                        <p class="title">Gonzalo</p>
+                        <p class="subtitles">At vero eos accusa</p>
+                    </div>
                 </div>
             </li>
             <li class="container">
-                <div class="box-container">
-                <img src="./assets/img/Screen Shot 2018-11-28 at 15.30.54.jpg"></div>
-                <div class="text-container">
-                    <p class="title">Juan Pablo</p>
-                    <p class="subtitles">Necessitatibus seape</p>
+                <div class="content-1">
+                    <div class="box-container">
+                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.30.54.jpg"></div>
+                    <div class="text-container">
+                        <p class="title">Juan Pablo</p>
+                        <p class="subtitles">Necessitatibus seape</p>
+                    </div>
                 </div>
             </li>
             <li class="container">
-                <div class="box-container">
-                <img src="./assets/img/Screen Shot 2018-11-28 at 15.28.04.jpg"></div>
-                <div class="text-container">
-                    <p class="title">Magdalena</p>
-                    <p class="subtitles">Ut et voluptates</p>
+                <div class="content-1">
+                    <div class="box-container">
+                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.28.04.jpg"></div>
+                    <div class="text-container">
+                        <p class="title">Magdalena</p>
+                        <p class="subtitles">Ut et voluptates</p>
+                    </div>
                 </div>
             </li>
         </ul>
