--- a/index.html
+++ b/index.html
@@ -15,35 +15,31 @@
 </head>
 <body>
 <div class="main-container">
-       <menu>
-        <ul>
+        <ul class="border border-secondary-subtle">
             <li class="container">
-                <div class="content-1">
+                <div class="content-0">
                     <div class="box-container">
                         <img src="./assets/img/maria.jpg" class="img-thumbnail">
                     </div>
-                    <div class="text-container">
+                    <div>
                         <p class="title">María</p>
                         <p class="subtitles">Activa ahora</p>
                     </div>
                     <div class="iconos">
-                        <div>
-                            <i class="fa-regular fa-message"></i>
-                        </div>
-                        <div>
-                            <i class="fa-solid fa-bars"></i>
-                        </div>
+                        <i class="fa-regular fa-message"></i>
+                        <i class="fa-solid fa-bars"></i>
                     </div>
                 </div>
             </li>
-            <li>
+            <li class="container">
                 <button type="button" class="btn btn-primary btn-lg">Nuevo Chat</button>
             </li>            
             <li class="container">
                 <div class="content-1">
                     <div class="box-container">
-                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg"></div>
-                    <div class="text-container">
+                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg">
+                    </div>
+                    <div>
                         <p class="title">Juanita</p>
                         <p class="subtitles">At vero eos et accusa</p>
                     </div>
@@ -52,8 +48,9 @@
             <li class="container">
                 <div class="content-1">
                     <div class="box-container">
-                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.32.16.jpg"></div>
-                    <div class="text-container">
+                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.32.16.jpg">
+                    </div>
+                    <div>
                         <p class="title">Alberto</p>
                         <p class="subtitles">Blanditiis praesentium</p>
                     </div>
@@ -62,8 +59,9 @@
             <li class="container">
                 <div class="content-1">
                     <div class="box-container">
-                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.30.34.jpg"></div>
-                    <div class="text-container">
+                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.30.34.jpg">
+                    </div>
+                    <div>
                         <p class="title">Ignacio</p>
                         <p class="subtitles">Officiis debitis aut</p>
                     </div>
@@ -72,8 +70,9 @@
             <li class="container">
                 <div class="content-1">
                     <div class="box-container">
-                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.28.30.jpg"></div>
-                    <div class="text-container">
+                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.28.30.jpg">
+                    </div>
+                    <div>
                         <p class="title">Cristian</p>
                         <p class="subtitles">Nam libero tempore</p>
                     </div>
@@ -82,8 +81,9 @@
             <li class="container">
                 <div class="content-1">
                     <div class="box-container">
-                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.32.44.jpg"></div>
-                    <div class="text-container">
+                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.32.44.jpg">
+                    </div>
+                    <div>
                         <p class="title">María José</p>
                         <p class="subtitles">Impedit quo minus id</p>
                     </div>
@@ -92,8 +92,9 @@
             <li class="container">
                 <div class="content-1">
                     <div class="box-container">
-                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.31.09.jpg"></div>
-                    <div class="text-container">
+                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.31.09.jpg">
+                    </div>
+                    <div>
                         <p class="title">Gonzalo</p>
                         <p class="subtitles">At vero eos accusa</p>
                     </div>
@@ -102,8 +103,9 @@
             <li class="container">
                 <div class="content-1">
                     <div class="box-container">
-                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.30.54.jpg"></div>
-                    <div class="text-container">
+                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.30.54.jpg">
+                    </div>
+                    <div>
                         <p class="title">Juan Pablo</p>
                         <p class="subtitles">Necessitatibus seape</p>
                     </div>
@@ -112,15 +114,15 @@
             <li class="container">
                 <div class="content-1">
                     <div class="box-container">
-                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.28.04.jpg"></div>
-                    <div class="text-container">
+                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.28.04.jpg">
+                    </div>
+                    <div>
                         <p class="title">Magdalena</p>
                         <p class="subtitles">Ut et voluptates</p>
                     </div>
                 </div>
             </li>
         </ul>
-    </menu>
 
         <div class="content-p">
             <img src="./assets/img/hand.png" width="200px">
