--- a/index.html
+++ b/index.html
@@ -14,118 +14,89 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">    <title>Menú</title>
 </head>
 <body>
-<div class="main-container">
-        <ul>
-            <li class="container">
-                <div class="content-0">
-                    <div class="box-container">
-                        <img src="./assets/img/maria.jpg" class="img-thumbnail">
+<div class="container">
+        <ul class="sidebar">
+            <li class="profile">
+                    <img src="./assets/img/maria.jpg" class="img-thumbnail">
+                    <div class="profile-info">
+                    <h4>Maria</h4>
+                    <span>Activo ahora</span>
                     </div>
-                    <div>
-                        <p class="title">María</p>
-                        <p class="subtitles">Activa ahora</p>
-                    </div>
-                    <div class="iconos">
+                    <div class="menu">
                         <i class="fa-regular fa-message"></i>
                         <i class="fa-solid fa-bars"></i>
                     </div>
-                </div>
+     
             </li> 
-            <li class="container">
-                <button type="button" class="btn btn-primary btn-lg">Nuevo Chat</button>
+            <li class="new-chat">
+                <button>Nuevo Chat</button>
             </li>  
-            <li class="container">
-                <div class="content-1">
-                    <div class="box-container">
-                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg">
-                    </div>
-                    <div>
-                        <p class="title">Juanita</p>
-                        <p class="subtitles">At vero eos et accusa</p>
-                    </div>
-                </div>
+            <li class="profile">
+                    <img src="./assets/img/Screen Shot 2018-11-28 at 15.27.14.jpg">
+                    <div class="profile-info">
+                    <h4>Juanita</h4>
+                    <span>At vero eos et accusa</span>
+                    </div>    
             </li>
-            <li class="container">
-                <div class="content-1">
-                    <div class="box-container">
-                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.32.16.jpg">
-                    </div>
-                    <div>
-                        <p class="title">Alberto</p>
-                        <p class="subtitles">Blanditiis praesentium</p>
-                    </div>
-                </div>
+            <li class="profile">
+                    <img src="./assets/img/Screen Shot 2018-11-28 at 15.32.16.jpg">
+                    <div class="profile-info">
+                    <h4>Alberto</h4>
+                    <span>Blanditiis praesentium</span>
+                    </div>    
             </li>
-            <li class="container">
-                <div class="content-1">
-                    <div class="box-container">
-                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.30.34.jpg">
-                    </div>
-                    <div>
-                        <p class="title">Ignacio</p>
-                        <p class="subtitles">Officiis debitis aut</p>
-                    </div>
-                </div>
+
+            <li class="profile">
+                    <img src="./assets/img/Screen Shot 2018-11-28 at 15.30.34.jpg">
+                    <div class="profile-info">
+                    <h4>Ignacio</h4>
+                    <span>Officiis debitis aut</span>
+                    </div>    
             </li>
-            <li class="container">
-                <div class="content-1">
-                    <div class="box-container">
-                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.28.30.jpg">
-                    </div>
-                    <div>
-                        <p class="title">Cristian</p>
-                        <p class="subtitles">Nam libero tempore</p>
-                    </div>
-                </div>
+
+            <li class="profile">
+                    <img src="./assets/img/Screen Shot 2018-11-28 at 15.28.30.jpg">
+                    <div class="profile-info">
+                    <h4>Cristian</h4>
+                    <span>Nam libero tempore</span>
+                    </div>    
             </li>
-            <li class="container">
-                <div class="content-1">
-                    <div class="box-container">
-                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.32.44.jpg">
-                    </div>
-                    <div>
-                        <p class="title">María José</p>
-                        <p class="subtitles">Impedit quo minus id</p>
-                    </div>
-                </div>
+
+            <li class="profile">
+                    <img src="./assets/img/Screen Shot 2018-11-28 at 15.32.44.jpg">
+                    <div class="profile-info">
+                    <h4>María José</h4>
+                    <span>Impedit quo minus id</span>
+                    </div>    
             </li>
-            <li class="container">
-                <div class="content-1">
-                    <div class="box-container">
-                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.31.09.jpg">
-                    </div>
-                    <div>
-                        <p class="title">Gonzalo</p>
-                        <p class="subtitles">At vero eos accusa</p>
-                    </div>
-                </div>
+
+            <li class="profile">
+                    <img src="./assets/img/Screen Shot 2018-11-28 at 15.31.09.jpg">
+                    <div class="profile-info">
+                    <h4>Gonzalo</h4>
+                    <span>At vero eos accusa</span>
+                    </div>    
             </li>
-            <li class="container">
-                <div class="content-1">
-                    <div class="box-container">
-                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.30.54.jpg">
-                    </div>
-                    <div>
-                        <p class="title">Juan Pablo</p>
-                        <p class="subtitles">Necessitatibus seape</p>
-                    </div>
-                </div>
+
+            <li class="profile">
+                    <img src="./assets/img/Screen Shot 2018-11-28 at 15.30.54.jpg">
+                    <div class="profile-info">
+                    <h4>Juan Pablo</h4>
+                    <span>Necessitatibus seape</span>
+                    </div>    
             </li>
-            <li class="container">
-                <div class="content-1">
-                    <div class="box-container">
-                        <img src="./assets/img/Screen Shot 2018-11-28 at 15.28.04.jpg">
-                    </div>
-                    <div>
-                        <p class="title">Magdalena</p>
-                        <p class="subtitles">Ut et voluptates</p>
-                    </div>
-                </div>
+
+            <li class="profile">
+                    <img src="./assets/img/Screen Shot 2018-11-28 at 15.28.04.jpg">
+                    <div class="profile-info">
+                    <h4>Magdalena</h4>
+                    <span>Ut et voluptates</span>
+                    </div>    
             </li>
         </ul>
 
-        <div class="content-p">
-            <img src="./assets/img/hand.png" width="200px">
+        <div class="main">
+            <img src="./assets/img/hand.png">
             <h1>Comienza el Nertworking</h1>
             <p class="subtitles-content">Presiona el "<strong>Nuevo chat</strong>" para comenzar a crear nuevas</p>
             <p class="subtitles-content">redes de contacto para tu empresa o  emprendimiento</p>
