agrega color de fondo

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </ul>
 
         <div class="main">
-            <img src="./assets/img/hand.png" width="200">
+            <img src="./assets/img/hand.png">
             <h1>Comienza el Nertworking</h1>
             <p class="subtitles-content">Presiona el "<strong>Nuevo chat</strong>" para comenzar a crear nuevas</p>
             <p class="subtitles-content">redes de contacto para tu empresa o  emprendimiento</p>
